@property, Getter and Setter

--- a/Python/13_OOP/b_oop_encapsulation.ipynb
+++ b/Python/13_OOP/b_oop_encapsulation.ipynb
@@ -22,6 +22,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6e66f840",
+   "metadata": {},
+   "source": [
+    "#### Public attribute"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b5ef8f44",
@@ -80,8 +88,448 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53962ba4",
+   "id": "45430d82",
    "metadata": {},
+   "source": [
+    "#### Private attribute"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7bb19ef2",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Person' object has no attribute 'name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mAttributeError\u001b[39m                            Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      5\u001b[39m         \u001b[38;5;28mself\u001b[39m._age = age\n\u001b[32m      6\u001b[39m p3 = Person(\u001b[33m\"\u001b[39m\u001b[33mBeda\u001b[39m\u001b[33m\"\u001b[39m, -\u001b[32m3\u001b[39m)\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m \u001b[43mp3\u001b[49m\u001b[43m.\u001b[49m\u001b[43mname\u001b[49m\n",
+      "\u001b[31mAttributeError\u001b[39m: 'Person' object has no attribute 'name'"
+     ]
+    }
+   ],
+   "source": [
+    "# Private attribute\n",
+    "class Person:\n",
+    "    def __init__(self, name, age):\n",
+    "        self._name = name\n",
+    "        self._age = age\n",
+    "p3 = Person(\"Beda\", -3)\n",
+    "\n",
+    "# private attribute cannot be accessed\n",
+    "p3.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f6b7987a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Beda'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Accessing a private attribute\n",
+    "# python programmers know that _ is private by convetion\n",
+    "p3._name"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b668c12e",
+   "metadata": {},
+   "source": [
+    "#### Fix validation of age"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c341209",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Age must be between 0 and 124\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Person('Eda', '5')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Private attribute\n",
+    "class Person:\n",
+    "    def __init__(self, name, age):\n",
+    "        self._name = name\n",
+    "\n",
+    "        # fix validation inside the __init__\n",
+    "        # issue: this validation only happens during instantiation\n",
+    "        if not (0<= age < 125):\n",
+    "            raise ValueError (\"Age must be between 0 and 124\")\n",
+    "        \n",
+    "        self._age = age\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f\"Person('{self._name}', '{self._age}')\"\n",
+    "\n",
+    "# trt except for validation\n",
+    "try:\n",
+    "    p4 = Person(\"Doda\", -5)\n",
+    "except ValueError as err:\n",
+    "    print(err)\n",
+    "\n",
+    "p5 = Person(\"Eda\", 5)\n",
+    "p5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12a2fb78",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Person('Eda', '-5')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# it not good to call this but okay since validation only happens in _init\n",
+    "p5._age = -5\n",
+    "p5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31926368",
+   "metadata": {},
+   "source": [
+    "#### Implementing a getter\n",
+    "####  @Property\n",
+    "- The syntax used to define properties is very concise and readable.<br>\n",
+    "- You can access instance attributes exactly as if they were public attributes while using the \"magic\" of intermediaries (getters and setters) to validate new values and to avoid accessing or modifying the data directly.<br>\n",
+    "- By using @property, you can \"reuse\" the name of a property to avoid creating new names for the getters, setters, and deleters.<br>\n",
+    "<br>\n",
+    "- getter -> gets a value\n",
+    "- setter -> sets a value<br>\n",
+    "<br>\n",
+    "put in validation code in the setter<br>\n",
+    "resource: <br>\n",
+    "https://www.freecodecamp.org/news/python-property-decorator/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "56a053c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "age getter called\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Tos solve the issue of \"this validation only happens during instantiation\"\n",
+    "\n",
+    "# Private attribute\n",
+    "class Person:\n",
+    "    def __init__(self, name, age):\n",
+    "        self._name = name\n",
+    "\n",
+    "        # fix validation inside the __init__\n",
+    "        # issue: this validation only happens during instantiation\n",
+    "        if not (0<= age < 125):\n",
+    "            raise ValueError (\"Age must be between 0 and 124\")\n",
+    "        \n",
+    "        self._age = age\n",
+    "\n",
+    "    # decorator - gives a function more functionality\n",
+    "    # makes it into a property (getter and setter)\n",
+    "    # should be before the actual method we're decorating\n",
+    "    @property\n",
+    "    def age(self):\n",
+    "        print(\"age getter called\")\n",
+    "        return self._age\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f\"Person('{self._name}', '{self._age}')\"\n",
+    "    \n",
+    "\n",
+    "# new sample\n",
+    "p6 = Person(\"Bibbi\", 8)\n",
+    "p6.age"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6053e7b4",
+   "metadata": {},
+   "source": [
+    "#### Implementing a setter - Code explnation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d850cf6c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "age setter called\n",
+      "age getter called\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Tos solve the issue of \"this validation only happens during instantiation\"\n",
+    "\n",
+    "# Private attribute\n",
+    "# Create a blueprint for creating person Objects\n",
+    "class Person:\n",
+    "\n",
+    "    # constructor method\n",
+    "    # runs auto when a new Person is created\n",
+    "    def __init__(self, name, age):\n",
+    "\n",
+    "         # The underscore before _name means it's a \"private\" variable by convention.\n",
+    "        # It shouldn't be accessed or modified directly outside this class.\n",
+    "        self._name = name\n",
+    "\n",
+    "        # We validate the age here, but the problem is:\n",
+    "        # this check only runs once — when the object is first created.\n",
+    "        # Later, someone could still do p7.age = 9999 without triggering this validation.\n",
+    "        if not (0<= age < 125):\n",
+    "            raise ValueError (\"Age must be between 0 and 124\")\n",
+    "        \n",
+    "        # Assign the given age to self.age (notice no underscore here!)\n",
+    "        # This actually triggers the setter method below (@age.setter)\n",
+    "        self.age = age\n",
+    "\n",
+    "    # @property turns a method into a \"getter\" for a private attribute.\n",
+    "    # When we access p7.age, Python will *automatically* call this function.\n",
+    "    \n",
+    "    # implement the getter\n",
+    "    @property\n",
+    "    def age(self):\n",
+    "        print(\"age getter called\")  # Just to show that this function is being used\n",
+    "        return self._age            # Return the actual private attribute _age\n",
+    "    \n",
+    "    # implement a setter\n",
+    "    # the value is what the user will input\n",
+    "    @age.setter\n",
+    "    def age(self, value):\n",
+    "        print(\"age setter called\")\n",
+    "        self._age = value\n",
+    "\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f\"Person('{self._name}', '{self._age}')\"\n",
+    "    \n",
+    "\n",
+    "# when instantiating Person - we use the age SETTER\n",
+    "# new sample\n",
+    "p7 = Person(\"Bobbo\", 8)\n",
+    "\n",
+    "# when instantiating age - we use the age GETTER\n",
+    "p7.age"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "c0c5995e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "age setter called\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Person('Bobbo', '33')"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p7.age = 33\n",
+    "p7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e4e2e719",
+   "metadata": {},
+   "source": [
+    "#### Exercise\n",
+    "This is not allowed, give proper error message"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60620a36",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "age setter called\n",
+      "age getter called\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-5"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "class Person:\n",
+    "\n",
+    "    def __init__(self, name, age):\n",
+    "        self._name = name\n",
+    "\n",
+    "        # whenever we do assignment where there is a setter\n",
+    "        # the setter will be called\n",
+    "        self.age = age\n",
+    "   \n",
+    "    @property\n",
+    "    def age(self, value):\n",
+    "        print(\"age getter called\")\n",
+    "        return self._age\n",
+    "    \n",
+    "    @age.setter\n",
+    "    def age(self, value):\n",
+    "        print(\"age setter called\")\n",
+    "        \n",
+    "        if not (0<= value < 125):\n",
+    "            raise ValueError (f\"Age must be between 0 and 124, not {value}\")\n",
+    "        \n",
+    "        self._age = value\n",
+    "\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f\"Person('{self._name}', '{self.age}')\"\n",
+    "    \n",
+    "\n",
+    "# when instantiating Person - we use the age SETTER\n",
+    "# new sample\n",
+    "p9 = Person(\"Dadda\", 5)\n",
+    "\n",
+    "try:\n",
+    "    p9.age = -3\n",
+    "except ValueError as err:\n",
+    "    print(err)\n",
+    "\n",
+    "# when instantiating age - we use the age GETTER\n",
+    "p7.age"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "409f5545",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "age setter called\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Person('Bobbo', '-5')"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p9.age = -5\n",
+    "p9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23ce2203",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
