--- a/Python/13_OOP/b_oop_encapsulation.ipynb
+++ b/Python/13_OOP/b_oop_encapsulation.ipynb
@@ -344,7 +344,7 @@
     "class Person:\n",
     "\n",
     "    # constructor method\n",
-    "    # runs auto when a new Person is created\n",
+    "    # runs autmaticallyo when a new Person is created\n",
     "    def __init__(self, name, age):\n",
     "\n",
     "         # The underscore before _name means it's a \"private\" variable by convention.\n",
@@ -370,14 +370,20 @@
     "        print(\"age getter called\")  # Just to show that this function is being used\n",
     "        return self._age            # Return the actual private attribute _age\n",
     "    \n",
-    "    # implement a setter\n",
-    "    # the value is what the user will input\n",
+    "    # @age.setter defines how we handle assignment to 'age'\n",
+    "    # Example: when we do p7.age = 30, this method is automatically called.\n",
     "    @age.setter\n",
     "    def age(self, value):\n",
-    "        print(\"age setter called\")\n",
+    "        print(\"age setter called\")   # Just to show when this is triggered\n",
+    "        \n",
+    "        # Currently, this setter doesn’t re-check the validation.\n",
+    "        # To make it fully encapsulated, we should move the validation here\n",
+    "        # so every new value (even after creation) is checked before saving.\n",
     "        self._age = value\n",
     "\n",
     "\n",
+    "    # __repr__ is a built-in method that defines what the object looks like when printed.\n",
+    "    # It returns a developer-friendly string version of the object.\n",
     "    def __repr__(self):\n",
     "        return f\"Person('{self._name}', '{self._age}')\"\n",
     "    \n",
@@ -425,12 +431,15 @@
    "metadata": {},
    "source": [
     "#### Exercise\n",
-    "This is not allowed, give proper error message"
+    "make sure that this is not allowed, give proper error message\n",
+    "\n",
+    "test them out, both getter and setter\n",
+    "extra: check the type also with isinstance()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "60620a36",
    "metadata": {},
    "outputs": [
@@ -439,60 +448,54 @@
      "output_type": "stream",
      "text": [
       "age setter called\n",
+      "age setter called\n",
+      "Age must be between 0 and 124, not -3\n",
       "age getter called\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "-5"
+       "Person('Dadda', 5)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "class Person:\n",
-    "\n",
     "    def __init__(self, name, age):\n",
     "        self._name = name\n",
-    "\n",
     "        # whenever we do assignment where there is a setter\n",
     "        # the setter will be called\n",
     "        self.age = age\n",
-    "   \n",
+    "\n",
+    "    # a decorator - it gives a function more functionality\n",
+    "    # makes it into a property (getter and setter)\n",
     "    @property\n",
-    "    def age(self, value):\n",
+    "    def age(self):\n",
     "        print(\"age getter called\")\n",
     "        return self._age\n",
-    "    \n",
+    "\n",
     "    @age.setter\n",
     "    def age(self, value):\n",
     "        print(\"age setter called\")\n",
-    "        \n",
-    "        if not (0<= value < 125):\n",
-    "            raise ValueError (f\"Age must be between 0 and 124, not {value}\")\n",
-    "        \n",
+    "\n",
+    "        if not (0 <= value < 125):\n",
+    "            raise ValueError(f\"Age must be between 0 and 124, not {value}\")\n",
     "        self._age = value\n",
     "\n",
-    "\n",
     "    def __repr__(self):\n",
-    "        return f\"Person('{self._name}', '{self.age}')\"\n",
-    "    \n",
+    "        return f\"Person('{self._name}', {self.age})\"\n",
     "\n",
-    "# when instantiating Person - we use the age SETTER\n",
-    "# new sample\n",
     "p9 = Person(\"Dadda\", 5)\n",
-    "\n",
     "try:\n",
     "    p9.age = -3\n",
     "except ValueError as err:\n",
     "    print(err)\n",
-    "\n",
-    "# when instantiating age - we use the age GETTER\n",
-    "p7.age"
+    "p9"
    ]
   },
   {
@@ -526,8 +529,303 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "23ce2203",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "age getter called\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p9.age"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f6236ba",
+   "metadata": {},
+   "source": [
+    "#### OOP Encapsulation Exercise\n",
+    "(+) public attribute\n",
+    "(-) private attribute<br>\n",
+    "________________________\n",
+    "<br>\n",
+    "+ name<br>\n",
+    "- social_security_nr(int)<br>\n",
+    "+ salary (int)<br>\n",
+    "+ role<br>\n",
+    "+ employment_year(int)<br>\n",
+    "methods<br>\n",
+    "increase_salary(self, value)<br>\n",
+    "shows the Total of current and additional salary = TOTAL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a0937fde",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# My solution\n",
+    "class Employee:\n",
+    "    # runs autmatically when a new Employee is created\n",
+    "    def __init__(self, name, social_security_nr, salary, role, employment_year):\n",
+    "        self.name = name\n",
+    "        self._social_security_nr = social_security_nr\n",
+    "        self.salary = salary\n",
+    "        self.role = role\n",
+    "        self.employment_year = employment_year\n",
+    "    \n",
+    "    # salary setter\n",
+    "    @property\n",
+    "    def salary(self):\n",
+    "        print(\"private attribute: Getter is triggered\")\n",
+    "        return self._salary\n",
+    "    \n",
+    "    # salary getter\n",
+    "    @salary.setter\n",
+    "    def salary(self, value):\n",
+    "        print(\"private attribute: Setter is triggered\")\n",
+    "\n",
+    "        if value > 0:\n",
+    "            raise ValueError(f'Salary number must be an integer.')\n",
+    "        self._salary = value\n",
+    "\n",
+    "    \n",
+    "    # salary increase for 5% each\n",
+    "    def increas_salary(self, value):\n",
+    "        value *.5 == value\n",
+    "\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "     return f\"Employee('Name: {self.name}\\nSocial Security nr: {self.social_security_nr}\\nSalary: {self.salary}\\nRole: {self.role}\\nEmployment Year: {self.employment_year}\\n')\"\n",
+    "    \n",
+    "\n",
+    "\n",
+    "employee1 = Employee(\"Aira\", 199401011234, 50000, \"Data Engineer\", 2027)\n",
+    "employee2 = Employee(\"Anna\", 199307017893, 64000, \"Software Engineer\", 2019)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "65caec43",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "50000"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "employee1.name\n",
+    "employee1.salary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6d917f6",
+   "metadata": {},
+   "source": [
+    "#### Class Solution\n",
+    "- documentation / docstring\n",
+    "- type printing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "160e3717",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Salary can't be negative value -64000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# class solution\n",
+    "class Employee:\n",
+    "    \"\"\"\n",
+    "    A class to hold employee information\n",
+    "\n",
+    "    Attributes:\n",
+    "    - name (str): name of the person\n",
+    "    - social_security_nr (int): the social security number of a person in 12 numbers\n",
+    "    - salary (int): salary in SEK, needs to be larger than 0\n",
+    "    ...\n",
+    "\n",
+    "    Methods:\n",
+    "    - increase_salary(value): increases the salary of the employee with value SEK\n",
+    "\n",
+    "    Example usage:\n",
+    "    >>> e1 = Employee(\"Aira\", 199401011234, 50000, \"Data Engineer\", 2027)\n",
+    "    >>> e1.increase_salary(5000)\n",
+    "    >>> e1.salary\n",
+    "\n",
+    "    >>> e2 = Employee(\"Anna\", 199307017893, -64000, \"Software Engineer\", 2019)\n",
+    "\n",
+    "\n",
+    "    \"\"\"\n",
+    "    # added type printing to show the variable type\n",
+    "    def __init__(self, name:str, social_security_nr:int, salary:int, role:str, employment_year:int):\n",
+    "        self.name = name\n",
+    "        self._social_security_nr = social_security_nr   # private attribute\n",
+    "        self.salary = salary\n",
+    "        self.role = role\n",
+    "        self.employment_year = employment_year\n",
+    "\n",
+    "    @property\n",
+    "    def salary(self):\n",
+    "        # return the private backing variable\n",
+    "        return self._salary\n",
+    "\n",
+    "    @salary.setter\n",
+    "    def salary(self, value):\n",
+    "        if value <= 0:\n",
+    "            raise ValueError (f\"Salary can't be negative value {value}\")\n",
+    "        # overwrite the new salary\n",
+    "        self._salary = value\n",
+    "\n",
+    "    # method to increase salary\n",
+    "    def increas_salary(self, value):\n",
+    "        self.salary += value\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "     return f\"Employee: Name: {self.name}\\nSocial Security nr: {self._social_security_nr}\\nSalary: {self.salary}\\nRole: {self.role}\\nEmployment Year: {self.employment_year}\\n\"\n",
+    "    \n",
+    "e1 = Employee(\"Aira\", 199401011234, 50000, \"Data Engineer\", 2027)\n",
+    "\n",
+    "\n",
+    "try:\n",
+    "    e2 = Employee(\"Anna\", 199307017893, -64000, \"Software Engineer\", 2019)\n",
+    "except ValueError as err:\n",
+    "    print(err)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "51338238",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Employee: Name: Aira\n",
+       "Social Security nr: 199401011234\n",
+       "Salary: 50000\n",
+       "Role: Data Engineer\n",
+       "Employment Year: 2027"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "586f0278",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on class Employee in module __main__:\n",
+      "\n",
+      "class Employee(builtins.object)\n",
+      " |  Employee(name: str, social_security_nr: int, salary: int, role: str, employment_year: int)\n",
+      " |\n",
+      " |  Methods defined here:\n",
+      " |\n",
+      " |  __init__(self, name: str, social_security_nr: int, salary: int, role: str, employment_year: int)\n",
+      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
+      " |\n",
+      " |  __repr__(self)\n",
+      " |      Return repr(self).\n",
+      " |\n",
+      " |  increas_salary(self, value)\n",
+      " |\n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors defined here:\n",
+      " |\n",
+      " |  __dict__\n",
+      " |      dictionary for instance variables\n",
+      " |\n",
+      " |  __weakref__\n",
+      " |      list of weak references to the object\n",
+      " |\n",
+      " |  salary\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# See the documentation \n",
+    "help(Employee)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "a620b59f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Employee: Name: Anna\n",
+       "Social Security nr: 199307017893\n",
+       "Salary: 64000\n",
+       "Role: Software Engineer\n",
+       "Employment Year: 2019"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "e2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "15d3f7f3",
    "metadata": {},
    "outputs": [],
    "source": []
