--- a/Python/14_Inheritance/Inheritance.ipynb
+++ b/Python/14_Inheritance/Inheritance.ipynb
@@ -115,47 +115,150 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "2c409443",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Age must be between 0 and 123, not 125\n",
+      "Dan says hi!\n"
+     ]
+    }
+   ],
    "source": [
     "class Student(Person):\n",
     "    def __init__(self, name:str, age:int, language:str):\n",
     "        # inherits parent class' __init__ attributes\n",
     "        super(). __init__(name, age)\n",
-    "        self.language = language"
+    "        self.language = language\n",
+    "\n",
+    "    # overwrites say_hi() in Student, not in the parent\n",
+    "    def say_hi(self):\n",
+    "        print(f\"Student says hi in language {self.language}\")\n",
+    "\n",
+    "\n",
+    "# validation\n",
+    "    try:\n",
+    "        s1 = Student(\"Bjorn\", 125, language = \"Norska\")\n",
+    "    except ValueError as err:\n",
+    "        print(err)\n",
+    "\n",
+    "    s2 = Student(\"Dan\", 37, language = \"Python\")\n",
+    "    s2.say_hi()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 49,
    "id": "d8c948f5",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Age must be between 0 and 123, not 125",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[46]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m s1 = \u001b[43mStudent\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mBjorn\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m125\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlanguage\u001b[49m\u001b[43m \u001b[49m\u001b[43m=\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mNorska\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[45]\u001b[39m\u001b[32m, line 4\u001b[39m, in \u001b[36mStudent.__init__\u001b[39m\u001b[34m(self, name, age, language)\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, name:\u001b[38;5;28mstr\u001b[39m, age:\u001b[38;5;28mint\u001b[39m, language:\u001b[38;5;28mstr\u001b[39m):\n\u001b[32m      3\u001b[39m     \u001b[38;5;66;03m# inherits parent class' __init__ attributes\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m     \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m.\u001b[49m\u001b[43m \u001b[49m\u001b[34;43m__init__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mage\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      5\u001b[39m     \u001b[38;5;28mself\u001b[39m.language = language\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[42]\u001b[39m\u001b[32m, line 4\u001b[39m, in \u001b[36mPerson.__init__\u001b[39m\u001b[34m(self, name, age)\u001b[39m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34m__init__\u001b[39m(\u001b[38;5;28mself\u001b[39m, name: \u001b[38;5;28mstr\u001b[39m, age: \u001b[38;5;28mint\u001b[39m):\n\u001b[32m      3\u001b[39m     \u001b[38;5;28mself\u001b[39m._name = name\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m     \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mage\u001b[49m = age\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[42]\u001b[39m\u001b[32m, line 27\u001b[39m, in \u001b[36mPerson.age\u001b[39m\u001b[34m(self, value)\u001b[39m\n\u001b[32m     24\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mAge must be of type int, not \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mtype\u001b[39m(value)\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     26\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m value < \u001b[32m0\u001b[39m \u001b[38;5;129;01mor\u001b[39;00m value > \u001b[32m123\u001b[39m:\n\u001b[32m---> \u001b[39m\u001b[32m27\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mAge must be between 0 and 123, not \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mvalue\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m\"\u001b[39m)\n\u001b[32m     29\u001b[39m \u001b[38;5;28mself\u001b[39m._age = value\n",
-      "\u001b[31mValueError\u001b[39m: Age must be between 0 and 123, not 125"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "s1 = Student(\"Bjorn\", 125, language = \"Norska\")"
+    "s1 = Student(\"Bjorn\", 123, language = \"Norska\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79c1c45a",
+   "metadata": {},
+   "source": [
+    "## Viking: Child Class"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "f54e44bc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ubbe says hi!\n"
+     ]
+    }
+   ],
+   "source": [
+    "from oldcoins import OldCoinsStash\n",
+    "class Viking(Person):\n",
+    "    def __init__(self, name:str, age:int) -> None:\n",
+    "        super(). __init__(name, age)\n",
+    "\n",
+    "        # COMPOSITION - \"has a\" relationship\n",
+    "        self.stash = OldCoinsStash(name)\n",
+    "\n",
+    "viking_ubbe = Viking(\"Ubbe\", 35)\n",
+    "\n",
+    "# picks up say_hi() from Parent Class\n",
+    "viking_ubbe.say_hi()\n",
+    "\n",
+    "# deposit\n",
+    "viking_ubbe.stash.deposit(500, 10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "9ee5afac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Coins in stash: 500 riksdaler, 10 skilling'"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# chech balance\n",
+    "viking_ubbe.stash.check_balance()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "238ab384",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OldCoinStash(owner='Ubbe')"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Checking the stash\n",
+    "viking_ubbe.stash"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "bf8bef23",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# new viking\n",
+    "viking_ivar = Viking(\"Ivar\", 44)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfbfe540",
    "metadata": {},
    "outputs": [],
    "source": []
