Inheritance Unit Conveter Class Lecture, Modularizatrion lab 3 hint, Ploymorphism

--- a/Python/13_OOP/a_oop_fundamentals.ipynb
+++ b/Python/13_OOP/a_oop_fundamentals.ipynb
@@ -5,7 +5,10 @@
    "id": "99ca7029",
    "metadata": {},
    "source": [
-    "# Object Oriented Programming Fundamentals"
+    "# Object Oriented Programming Fundamentals\n",
+    "Resources:\n",
+    "https://www.digitalocean.com/community/tutorials/python-str-repr-functions <br>\n",
+    "<br>\n"
    ]
   },
   {
