--- a/Python/14_Inheritance/Inheritance.ipynb
+++ b/Python/14_Inheritance/Inheritance.ipynb
@@ -110,7 +110,8 @@
    "id": "30e51aff",
    "metadata": {},
    "source": [
-    "## Student: Child Class"
+    "## Student: Child Class\n",
+    "### Composition - \"has a\" relationship"
    ]
   },
   {
